# kbxyfywd

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  data_interceptor.cpp  demo.cpp  packet_builder.cpp  packet_builder.h  packet_parser.cpp  packet_parser.h  ui_bridge.cpp  ui_bridge.h  utils.cpp  utils.h  web_message_handler.cpp  wpe_hook.cpp  wpe_hook.h  wpe_hook_helpers.cpp
apps/macos/: README.md
data/: bufInfo.xml  dailytask.xml  errorInfo.xml  map.xml  monsternature.xml  npc.xml  npcdialog.xml  npctransform.xml  siteBuff.xml  siteBuff_desc.xml  skill.xml  sprite.xml  taskinfo.xml  tool.xml
docs/: macos-migration-blueprint.md
embedded/: minhook_data.h  minizip_helper.h  speed_x64_data.h  ui_html.h  webview2loader_data.h  zlib_data.h
include/activities/: activity_minigames.h  battle_six.h  dungeon_jump.h  horse_competition.h  shuangtai.h  spirit_collect.h
include/core/: app_host.h  data_interceptor.h  ui_bridge.h  utils.h  web_message_handler.h  window_messages.h
include/hook/: wpe_hook.h
include/internal/: activity_states_internal.h  shuangtai_internal.h  wpe_hook_internal.h
include/platform/: platform_interfaces.h
include/protocol/: packet_builder.h  packet_parser.h  packet_protocol.h  packet_types.h  packet_zlib_api.h
resources/: app.rc  ui.html
scripts/: .ui_html_zh_to_en.json  analyze_swf_basic.py  batch_translate_ui_html.py  download_swf.py  download_weekly.py  embed_dll.py  embed_html.py  fetch_activities.py  parse_lingyu.py  parse_weekly.py  translate_ui_html_en_only.py
src/app/: app_host.cpp  demo.cpp
src/core/: data_interceptor.cpp  ui_bridge.cpp  utils.cpp  web_message_handler.cpp
src/hook/: horse_competition.cpp  wpe_hook.cpp
src/platform/: README.md
src/protocol/: packet_builder.cpp  packet_parser.cpp
